# evo-dev

./: Cargo.toml  README.md
crates/genetic-algorithm/: Cargo.toml
crates/genetic-algorithm/src/: crossover_method.rs  genotype.rs  individual.rs  lib.rs  mutation_method.rs  selection_method.rs  stats.rs
crates/neural-network/: Cargo.toml
crates/neural-network/src/: layer.rs  lib.rs  neuron.rs
crates/simulation/: Cargo.toml
crates/simulation-cli/: Cargo.toml
crates/simulation-cli/src/: animal.rs  food.rs  main.rs  world.rs
crates/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
