[package]
name = "simulation-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
directories = "6.0.0"
lazy_static = "1.5.0"
nalgebra = "0.34.0"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["macros"] }
simulation = { path = "../simulation" }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
